test/invalid/idl/async-maplike.webidl
[Exposed=Window]
interface AsyncIterable {
  async maplike<DOMString, DOMString>;
};
